--- a/src/common/scss/sprite-template.scss
+++ b/src/common/scss/sprite-template.scss
@@ -3,7 +3,7 @@
   content: '';
   width: <%= svgItem.width %>px;
   height: <%= svgItem.height %>px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: <%= svgItem.positionX %>px <%= svgItem.positionY %>px;
   position: absolute;
