--- a/src/common/scss/sprite.scss
+++ b/src/common/scss/sprite.scss
@@ -3,7 +3,7 @@
   content: '';
   width: 17px;
   height: 15px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: 0px 0px;
   position: absolute;
@@ -13,7 +13,7 @@
   content: '';
   width: 32px;
   height: 28px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -17px 0px;
   position: absolute;
@@ -23,7 +23,7 @@
   content: '';
   width: 32px;
   height: 31px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -49px 0px;
   position: absolute;
@@ -33,7 +33,7 @@
   content: '';
   width: 32px;
   height: 32px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -81px 0px;
   position: absolute;
@@ -43,7 +43,7 @@
   content: '';
   width: 32px;
   height: 32px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -113px 0px;
   position: absolute;
@@ -53,7 +53,7 @@
   content: '';
   width: 16px;
   height: 17px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -145px 0px;
   position: absolute;
@@ -63,7 +63,7 @@
   content: '';
   width: 9px;
   height: 17px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -161px 0px;
   position: absolute;
@@ -73,7 +73,7 @@
   content: '';
   width: 13px;
   height: 26px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -170px 0px;
   position: absolute;
@@ -83,7 +83,7 @@
   content: '';
   width: 16px;
   height: 15px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -183px 0px;
   position: absolute;
@@ -93,7 +93,7 @@
   content: '';
   width: 16px;
   height: 17px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -199px 0px;
   position: absolute;
@@ -103,7 +103,7 @@
   content: '';
   width: 26px;
   height: 26px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -215px 0px;
   position: absolute;
@@ -113,7 +113,7 @@
   content: '';
   width: 32px;
   height: 31px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -241px 0px;
   position: absolute;
@@ -123,7 +123,7 @@
   content: '';
   width: 30px;
   height: 30px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -273px 0px;
   position: absolute;
@@ -133,7 +133,7 @@
   content: '';
   width: 20px;
   height: 26px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -303px 0px;
   position: absolute;
@@ -143,7 +143,7 @@
   content: '';
   width: 13px;
   height: 17px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -323px 0px;
   position: absolute;
@@ -153,7 +153,7 @@
   content: '';
   width: 21px;
   height: 26px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -336px 0px;
   position: absolute;
@@ -163,7 +163,7 @@
   content: '';
   width: 32px;
   height: 32px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -357px 0px;
   position: absolute;
@@ -173,7 +173,7 @@
   content: '';
   width: 11px;
   height: 17px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -389px 0px;
   position: absolute;
@@ -183,7 +183,7 @@
   content: '';
   width: 16px;
   height: 14px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -400px 0px;
   position: absolute;
@@ -193,7 +193,7 @@
   content: '';
   width: 26px;
   height: 22px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -416px 0px;
   position: absolute;
@@ -203,7 +203,7 @@
   content: '';
   width: 33px;
   height: 24px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -442px 0px;
   position: absolute;
@@ -213,7 +213,7 @@
   content: '';
   width: 20px;
   height: 12px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -475px 0px;
   position: absolute;
@@ -223,7 +223,7 @@
   content: '';
   width: 16px;
   height: 12px;
-  background-image: url('../sprite.svg');
+  background-image: url('./sprite.svg');
   background-repeat: no-repeat;
   background-position: -495px 0px;
   position: absolute;
