--- a/src/blocks/about/about.scss
+++ b/src/blocks/about/about.scss
@@ -1,22 +1,26 @@
-.figure--about {
-  @extend .figure--simple-card;
+.figure {
+  $this: &;
 
-  .figure__overlay {
-    --fiqure-overlay-icon-pos: 20px;
+  &--about {
+    @extend .figure--simple-card;
 
-    &::before {
-      @extend .icon--users;
+    #{$this}__overlay {
+      --fiqure-overlay-icon-pos: 20px;
 
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, calc(-50% - var(--fiqure-overlay-icon-pos)));
-    }
+      &::before {
+        @extend .icon--users;
 
-    &::after {
-      content: 'super team';
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, calc(-50% + var(--fiqure-overlay-icon-pos)));
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, calc(-50% - var(--fiqure-overlay-icon-pos)));
+      }
+
+      &::after {
+        content: 'super team';
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, calc(-50% + var(--fiqure-overlay-icon-pos)));
+      }
     }
   }
 }
