--- a/src/blocks/map/map.pug
+++ b/src/blocks/map/map.pug
@@ -1,4 +1,4 @@
 a#contact
 section.section.section--map
   .section__overlay
-  a(href='#', target='_blank') Open map
+  a(href='#', target='_blank', rel='noopener noreferrer') Open map
