--- a/src/blocks/do-comments/do-comments.pug
+++ b/src/blocks/do-comments/do-comments.pug
@@ -2,10 +2,10 @@ section.section.section--comments-do
   .section__container
     x-carousel
       x-carousel-item(selected)
-        img(src='img/do-comments/img/1.png', width='150', height='150', slot='img')
+        img(src='img/do-comments/img/1.png', alt='', width='150', height='150', slot='img')
         blockquote(slot='text') Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
         cite(slot='author') Joshua Earle
       x-carousel-item
-        img(src='img/do-comments/img/2.png', width='150', height='150', slot='img')
+        img(src='img/do-comments/img/2.png', alt='', width='150', height='150', slot='img')
         blockquote(slot='text') Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         cite(slot='author') Mike Bin
