--- a/src/blocks/footer-content--contact-socials/footer-content--contact-socials.pug
+++ b/src/blocks/footer-content--contact-socials/footer-content--contact-socials.pug
@@ -1,8 +1,9 @@
 include footer-content--contact-socials-item
 
 section.section.section--footer-follow.footer-follow
-  p.footer-follow__followers 15k
-    unescaped= ' '
+  p.footer-follow__followers
+    | 15k
+    |
     span followers
   .footer-follow__socials
     p Follow us:
