--- a/src/blocks/footer-copyright/footer-copyright.pug
+++ b/src/blocks/footer-copyright/footer-copyright.pug
@@ -1,5 +1,6 @@
 section.section.section--copyright
   .section__container
-    p © 2016 MoGo free PSD template by
-      unescaped= ' '
+    p
+      | © 2016 MoGo free PSD template by
+      |
       a(href='#') Laaqiq
