--- a/src/blocks/welcome/welcome.pug
+++ b/src/blocks/welcome/welcome.pug
@@ -3,7 +3,7 @@ section.section.section--welcome.welcome
   .section__container
     include ../welcome--header/welcome--header
     .welcome__content
-      hgroup.welcome__titles
+      .welcome__titles
         h4 Creative Template
         h1 Welcome
           br
