--- a/src/blocks/_section/section-header.pug
+++ b/src/blocks/_section/section-header.pug
@@ -1,6 +1,6 @@
 mixin section-header(title1, title2, text)
   header.section__header
-    hgroup
+    .section__header-titles
       h3= title1
       h2= title2
     if text
