--- a/src/blocks/footer-content--contact-subscribe/footer-content--contact-subscribe.pug
+++ b/src/blocks/footer-content--contact-subscribe/footer-content--contact-subscribe.pug
@@ -1,5 +1,5 @@
 section.section.section--footer-subscribe.footer-subscribe
-  form(action='', method='POST').form
+  form(action='#', method='POST').form
     label(for='user_email').label Your E-mail
     input(type='email', placeholder='Your E-mail', id='user_email', name='user_email', required).input
     button(type='submit').btn.btn--primary Subscribe
