--- a/src/blocks/welcome/welcome.scss
+++ b/src/blocks/welcome/welcome.scss
@@ -3,6 +3,7 @@
   background:
     var(--overlay--gradient),
     url('img/welcome/img/bg.jpg') no-repeat;
+  background-size: cover;
 
   &__content {
     text-align: center;
